# oxide-tools

./: README.md
formats/: README.md  cdt.hexpat
navmesh/blender/: README.md  generate-navmesh.py
navmesh/obj-export/: .gitignore  Cargo.toml  README.md
navmesh/obj-export/src/: asset_cache.rs  bvh.rs  main.rs
patterns/: bvh.hexpat  cdt.hexpat  gcnk.hexpat  gcnk_chunk.hexpat  gcnk_collision.hexpat  vec.hexpat
protocol-dissector/: README.md  soerudp.lua
protocol-dissector/freerealms/: ability.lua  base.lua  combat.lua  decode.lua  playerupdate.lua
replay/python/: README.md  replay.py
string-ids/: README.md  generate.js  package.json
string-ids/javascript/: .gitignore  package-lock.json
string-ids/rust/: README.md  cargo.toml
string-ids/rust/crates/jenkins-lookup2/: cargo.toml
string-ids/rust/src/: main.rs
string-ids/rust/string-ids/crates/jenkins-lookup2/src/: lib.rs
